fix nginx endpoint
